--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-01 Fri 18:51]
+#+CAPTION: Clock summary at [2017-12-01 Fri 21:14]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *34:07* |       |       | 100.0 |
+| *Total time*                                                                | *34:50* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 34:07   |       |       | 100.0 |
-| Active                                                                      |         | 34:07 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   3.1 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   6.3 |
+| Stories                                                                     | 34:50   |       |       | 100.0 |
+| Active                                                                      |         | 34:50 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   3.0 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   6.1 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.7 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  25.5 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  40.2 |
-| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   6.9 |
-| STARTED Finish setting up coveralls                                         |         |       |  2:24 |   7.0 |
-| STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   3.1 |
-| STARTED Implement exomodel in terms of exoelements                          |         |       |  2:09 |   6.3 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  24.9 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  39.4 |
+| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   6.7 |
+| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   8.5 |
+| STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   3.0 |
+| STARTED Implement exomodel in terms of exoelements                          |         |       |  2:19 |   6.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -343,6 +343,7 @@ program options:
 - [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
 
 *** STARTED Implement exomodel in terms of exoelements                :story:
+    CLOCK: [2017-12-01 Fri 21:03]--[2017-12-01 Fri 21:13] =>  0:10
     CLOCK: [2017-12-01 Fri 18:42]--[2017-12-01 Fri 18:51] =>  0:09
     CLOCK: [2017-12-01 Fri 15:58]--[2017-12-01 Fri 16:06] =>  0:08
     CLOCK: [2017-12-01 Fri 14:25]--[2017-12-01 Fri 15:46] =>  1:21
