--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-01 Fri 22:45]
+#+CAPTION: Clock summary at [2017-12-01 Fri 23:05]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *36:20* |       |       | 100.0 |
+| *Total time*                                                                | *36:39* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 36:20   |       |       | 100.0 |
-| Active                                                                      |         | 36:20 |       | 100.0 |
+| Stories                                                                     | 36:39   |       |       | 100.0 |
+| Active                                                                      |         | 36:39 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.9 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   5.9 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   5.8 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.6 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  23.9 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  37.8 |
-| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   6.5 |
-| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   8.1 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  23.7 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  37.4 |
+| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   6.4 |
+| STARTED Finish setting up coveralls                                         |         |       |  2:57 |   8.0 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.9 |
-| STARTED Implement exomodel in terms of exoelements                          |         |       |  3:49 |  10.5 |
+| STARTED Implement exomodel in terms of exoelements                          |         |       |  4:08 |  11.3 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -343,6 +343,7 @@ program options:
 - [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
 
 *** STARTED Implement exomodel in terms of exoelements                :story:
+    CLOCK: [2017-12-01 Fri 22:46]--[2017-12-01 Fri 23:05] =>  0:19
     CLOCK: [2017-12-01 Fri 22:35]--[2017-12-01 Fri 22:45] =>  0:10
     CLOCK: [2017-12-01 Fri 21:14]--[2017-12-01 Fri 22:34] =>  1:20
     CLOCK: [2017-12-01 Fri 21:03]--[2017-12-01 Fri 21:13] =>  0:10
