--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-02 Sat 12:04]
+#+CAPTION: Clock summary at [2017-12-02 Sat 12:24]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *37:35* |       |       | 100.0 |
+| *Total time*                                                                | *37:53* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 37:35   |       |       | 100.0 |
-| Active                                                                      |         | 37:35 |       | 100.0 |
+| Stories                                                                     | 37:53   |       |       | 100.0 |
+| Active                                                                      |         | 37:53 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.8 |
-| STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   5.7 |
-| COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.6 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  23.1 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  36.5 |
-| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   6.3 |
+| STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   5.6 |
+| COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.5 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  22.9 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  36.2 |
+| COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   6.2 |
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   7.8 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.8 |
-| STARTED Implement exomodel in terms of exoelements                          |         |       |  5:04 |  13.5 |
+| STARTED Implement exomodel in terms of exoelements                          |         |       |  5:22 |  14.2 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -343,6 +343,7 @@ program options:
 - [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
 
 *** STARTED Implement exomodel in terms of exoelements                :story:
+    CLOCK: [2017-12-02 Sat 12:05]--[2017-12-02 Sat 12:23] =>  0:18
     CLOCK: [2017-12-02 Sat 11:31]--[2017-12-02 Sat 12:04] =>  0:33
     CLOCK: [2017-12-01 Fri 23:29]--[2017-12-01 Fri 23:31] =>  0:02
     CLOCK: [2017-12-01 Fri 23:21]--[2017-12-01 Fri 23:28] =>  0:07
