--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-02 Sat 16:54]
+#+CAPTION: Clock summary at [2017-12-02 Sat 17:05]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *39:11* |       |       | 100.0 |
+| *Total time*                                                                | *39:21* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 39:11   |       |       | 100.0 |
-| Active                                                                      |         | 39:11 |       | 100.0 |
+| Stories                                                                     | 39:21   |       |       | 100.0 |
+| Active                                                                      |         | 39:21 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.7 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   5.4 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.5 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  22.2 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  35.0 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  22.1 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  34.9 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   6.0 |
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   7.5 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.7 |
-| STARTED Implement exomodel in terms of exoelements                          |         |       |  6:40 |  17.0 |
+| STARTED Implement exomodel in terms of exoelements                          |         |       |  6:50 |  17.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -343,6 +343,7 @@ program options:
 - [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
 
 *** STARTED Implement exomodel in terms of exoelements                :story:
+    CLOCK: [2017-12-02 Sat 16:55]--[2017-12-02 Sat 17:05] =>  0:10
     CLOCK: [2017-12-02 Sat 15:40]--[2017-12-02 Sat 16:54] =>  1:14
     CLOCK: [2017-12-02 Sat 12:24]--[2017-12-02 Sat 12:28] =>  0:04
     CLOCK: [2017-12-02 Sat 12:05]--[2017-12-02 Sat 12:23] =>  0:18
