--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,23 +13,23 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-12-02 Sat 20:36]
+#+CAPTION: Clock summary at [2017-12-02 Sat 20:43]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *41:03* |       |       | 100.0 |
+| *Total time*                                                                | *41:09* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 41:03   |       |       | 100.0 |
-| Active                                                                      |         | 41:03 |       | 100.0 |
+| Stories                                                                     | 41:09   |       |       | 100.0 |
+| Active                                                                      |         | 41:09 |       | 100.0 |
 | COMPLETED Edit release notes for previous sprint                            |         |       |  1:03 |   2.6 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   5.2 |
 | COMPLETED Remove remnants of upsilon                                        |         |       |  0:35 |   1.4 |
-| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  21.2 |
-| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  33.4 |
+| COMPLETED Create a well-defined set of stereotypes                          |         |       |  8:41 |  21.1 |
+| COMPLETED Fix rtags setup in laptop                                         |         |       | 13:43 |  33.3 |
 | COMPLETED Analysis on moving naming away from sewing terms                  |         |       |  2:21 |   5.7 |
 | STARTED Finish setting up coveralls                                         |         |       |  2:57 |   7.2 |
 | STARTED Create a single binary for all of dogen                             |         |       |  1:03 |   2.6 |
-| STARTED Implement exomodel in terms of exoelements                          |         |       |  8:32 |  20.8 |
+| STARTED Implement exomodel in terms of exoelements                          |         |       |  8:38 |  21.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -343,6 +343,7 @@ program options:
 - [[https://stackoverflow.com/questions/15541498/how-to-implement-subcommands-using-boost-program-options][How to implement subcommands using Boost.Program_options?]]
 
 *** STARTED Implement exomodel in terms of exoelements                :story:
+    CLOCK: [2017-12-02 Sat 20:37]--[2017-12-02 Sat 20:43] =>  0:06
     CLOCK: [2017-12-02 Sat 20:29]--[2017-12-02 Sat 20:36] =>  0:07
     CLOCK: [2017-12-02 Sat 19:32]--[2017-12-02 Sat 20:28] =>  0:56
     CLOCK: [2017-12-02 Sat 17:06]--[2017-12-02 Sat 17:45] =>  0:39
